# efficientzero-v2

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: atari.yaml  dmc_proprio.yaml  dmc_vision.yaml  smoke.yaml
scripts/: RUNPOD.md  eval.py  setup_remote.sh  train.py
src/efficientzero/: __init__.py
src/efficientzero/actor/: mixed_value_target.py  self_play.py
src/efficientzero/envs/: __init__.py  atari.py  dmcontrol.py  smoke.py  spec.py
src/efficientzero/mcts/: __init__.py  node.py  sampled_gumbel_search.py
src/efficientzero/networks/: __init__.py  dynamics.py  prediction.py  representation.py  shared.py
src/efficientzero/replay/: episode.py  prioritized_buffer.py
src/efficientzero/training/: losses.py  target_network.py  trainer.py
src/efficientzero/utils/: config.py  device.py  logging.py  support.py
tests/: test_mcts.py  test_networks.py  test_smoke_e2e.py
