[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "efficientzero"
version = "0.0.1"
description = "EfficientZero V2 reference implementation, scaffolded for cloud-GPU training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "wandb>=0.16",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
atari = ["ale-py>=0.10", "opencv-python>=4.9"]
dmc = ["dm-control>=1.0.20", "shimmy[dm-control]>=1.3"]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"
